# unlearn

./: .gitignore  CLAUDE.md  README.md  UNLEARN_FULL_SPEC.md  UNLEARN_V01_SPEC.md  pyproject.toml
examples/travel_platform/: README.md
examples/travel_platform/frontend/: package.json  tsconfig.json
examples/travel_platform/libs/travel_common/: pyproject.toml
examples/travel_platform/node-services/analytics-svc/: Dockerfile  package.json
examples/travel_platform/node-services/gateway-bff/: Dockerfile  package.json
examples/travel_platform/node-services/notification-svc/: Dockerfile  package.json
examples/travel_platform/services/booking-svc/: pyproject.toml
examples/travel_platform/services/inventory-svc/: pyproject.toml
examples/travel_platform/services/loyalty-svc/: pyproject.toml
examples/travel_platform/services/payments-svc/: pyproject.toml
examples/travel_platform/services/pricing-svc/: Dockerfile  pyproject.toml
examples/travel_platform/services/search-svc/: pyproject.toml
scripts/: benchmark.py
src/unlearn/: __init__.py  cli.py
src/unlearn/graph/: __init__.py  models.py  queries.py  serialise.py  store.py
src/unlearn/indexer/: __init__.py  languages.py  pipeline.py  resolver.py
src/unlearn/mcp/: __init__.py  server.py
src/unlearn/utils/: __init__.py  files.py  timing.py
tests/: conftest.py  test_extractors.py  test_graph.py  test_integration.py  test_mcp_tools.py  test_queries.py  test_resolver_source_roots.py
tests/fixtures/python_simple/: app.py
tests/fixtures/typescript_simple/: package.json
(+209 files in other folders)
